[KARAF-6878]Fix WARNING: package org.apache.karaf.specs.locator not in java.base
(cherry picked from commit 473586c163aa3e208fa8be96cd3393b9a6623d1c)
(cherry picked from commit 94d6b536624e0c83865ff8274cec753f826afad2)